--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Install Plugin Uploader
         run: dotnet tool install ArtemisRGB.Tools.PluginUploader --global
 
-      - name: Upload
-        if: github.ref == 'refs/heads/master'
-        run: artemis-plugin-uploader upload-all --pat ${{ secrets.WORKSHOP_PAT }} --folder src
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: plugins
+          path: src/**/bin/Release/net*/publish/
