--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,10 @@ jobs:
         run: dotnet tool install ArtemisRGB.Tools.PluginUploader --global
 
       - name: List publish outputs
-        run: dir src /s
+        run: Get-ChildItem -Path src -Recurse
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: plugins
-          path: |
-            src/*/bin/Release/net*/publish/
+          path: src/*/bin/Release/net*/publish/
